2010-12-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamemgr/bggame.cc, gamemgr/sigame.cc, gumps/Gump_manager.cc,
		gumps/Spellbookgump.cc: Allow spell scrolls, jawbone, and
		teeth in all games.

2010-12-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* objs/jawbone.cc: Don't allow two teeth with the same frame and
	shape to be placed in the same jawbone container.
	* monsters.cc: Use get_num_frames() to get max number of frames
		for random food drops
	* gamewin.cc: Commented out seemingly useless jawbone.h include

2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* cheat.cc: Fix bug that prevented -p command line from
		connecting with Exult Studio properly.
	* gumps/Face_stats.cc: Remove Dev game loading restriction
	* cheat_screen.cc, gumps/GameplayOptions_gump.cc, shapeid.cc:
		Allow SI style paper dolls in Dev games.

2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* game.cc: Disabled into and ending for new games not based
		on U7 data
	* keyactions.cc: Only allow one cstat gump to show

2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Made party member only not call fight_back() if
		dead and the attacker is a party member. Made fight_back()
		have the party fight back if in combat mode and one of the
		party members takes damage.
	* gamewin.cc: Made paused_combat_select put the attacking party
		member into combat mode if not already.

2010-12-22 Malignant Manor <malignantmanor@users.sourceforge.net>
	* browser.cc, keyaction.*, keys.*: Add shape_browser_help
		key binding that displays the shape browser keys. Shape
		browser menu now shows the keys when you press 'K'.

2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/Spellbook_gump.cc: Spellbooks can now be edited in map
		edit mode. Exult Studio doesn't detect any changes in it so
		Save all is unreliable with it. Choose File->Save...->Map